k8s/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend              
spec:
  type: ClusterIP            
  selector:
    app: backend             
  ports:
  - name: http
    port: 3000               
    targetPort: 3000
